Replace GTNHLib Unsafe memory access